--- a/src/css/main.css
+++ b/src/css/main.css
@@ -35,15 +35,18 @@
     align-items: center;
     margin: 6% auto;
 }
-.d-flex--space-between{
+
+.d-md-flex-d-sm-block{
     display: flex;
     justify-content: space-between;
 }
+
 .mb-auto{margin-bottom: auto;}
 .mt-5{margin-top: 5%;}
 .mb-5{margin-bottom: 5%;}
 
 .col-md-6{ width: 50%; }
+.col-md-3{ width: 25%; }
 
 .title{
     font-size: 32px;
@@ -70,5 +73,9 @@
 }
 
 @media screen and (max-width: 900px) {
+    .d-md-flex-d-sm-block{
+        display: block;
+    }
+    
     .col-12{ width: 100%; }
 }
